# starfighter

./: .gitignore  LICENSES  Makefile  Makefile.am  README.txt  autogen.sh  configure.ac  makefile  pack.py  sources.gfx  sources.music  sources.sound  starfighter  starfighter.sh  unpack.py  win32build.sh
.github/: FUNDING.yml
.github/workflows/: main.yml
code/: Starfighter.cpp  Starfighter.h  ai.cpp  ai.h  aliens.cpp  aliens.h  audio.cpp  audio.h  bullets.cpp  bullets.h  cargo.cpp  cargo.h  classes.h  collectable.cpp  collectable.h  comms.cpp  comms.h  debris.cpp  debris.h  defs.h  events.cpp  events.h  explosions.cpp  explosions.h  game.cpp  game.h  globals.cpp  globals.h  graphics.cpp  graphics.h  init.cpp  init.h  intermission.cpp  intermission.h  loadSave.cpp  loadSave.h  math.h  messages.cpp  messages.h  misc.cpp  (+18 more)
data/: Makefile.am  brief1.txt  brief10.txt  brief11.txt  brief12.txt  brief13.txt  brief14.txt  brief15.txt  brief16.txt  brief17.txt  brief18.txt  brief2.txt  brief20.txt  brief21.txt  brief22.txt  brief23.txt  brief24.txt  brief25.txt  brief26.txt  brief3.txt  brief4.txt  brief5.txt  brief6.txt  brief7.txt  brief8.txt  brief9.txt  credits.txt  extro.txt  intro.txt  script11.txt  script13.txt  script16.txt  script17.txt  script22.txt  script23.txt  script25.txt  script26.txt  script5.txt  script7.txt  script8.txt
docs/: Makefile.am  index.html
gfx/: Makefile.am
locale/: Makefile.am  build.py  en.po  eo.po  es_ES.po  ja.po  nl.po  po-update.py  pr-starfighter.pot
mac/: README.txt
mac/starfighter/: Info.plist
mac/starfighter.xcodeproj/: project.pbxproj
mac/starfighter/Assets.xcassets/AppIcon.appiconset/: Contents.json
misc/: Makefile.am  io.github.pr-starfighter.starfighter.metainfo.xml  io.github.pr_starfighter.starfighter.metainfo.xml  org.starfighter.starfighter.metainfo.xml  starfighter.6  starfighter.appdata.xml  starfighter.desktop  starfighter.metainfo.xml  starfighter.sh  unpack.py
music/: Makefile  Makefile.am  README  drums.abc  drums.csd  space.abc  space.csd  warm-up.abc  warm-up.csd
music/sources/: android_journey.mmpz  android_oppression.mmpz  androids_last_dance.mmpz  first_cyber_dance.mmpz  last_cyber_dance.mmpz  reremix.mmpz  sleeping_with_androids.mmpz
sound/: Makefile  Makefile.am  README  explode.csd  explode2.csd  explode3.csd  explode4.csd  item.csd  laser.csd  plasma.csd
src/: Makefile.am  Starfighter.c  Starfighter.cpp  Starfighter.h  ai.cpp  ai.h  alien.c  alien.cpp  alien.h  aliens.cpp  aliens.h  audio.c  audio.cpp  audio.h  bullet.c  bullet.cpp  bullet.h  bullets.cpp  bullets.h  cargo.c  cargo.cpp  cargo.h  collectable.c  collectable.cpp  collectable.h  colors.c  colors.cpp  colors.h  comms.cpp  comms.h  cutscene.c  cutscene.cpp  cutscene.h  debris.cpp  debris.h  defs.c  defs.h  engine.c  engine.cpp  engine.h  (+76 more)
tests/: test_invariant_radio.c
