# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

SUBDIRS = src misc

dist_doc_DATA = README.txt COPYING LICENSES

if !RUN_IN_PLACE

nobase_dist_pkgdata_DATA = data/* gfx/* music/* sound/* locale/*

endif

EXTRA_DIST = starfighter.sh win32build.sh

