# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

SUBDIRS = gfx locale misc music sound src

dist_doc_DATA = README.txt COPYING LICENSES

nobase_dist_pkgdata_DATA = \
    data/credits.txt \
    data/ipa_font_license.txt \
    data/TakaoPGothic.ttf

EXTRA_DIST = autogen.sh win32build.sh misc
