# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

sfdatadir = $(pkgdatadir)/data

dist_sfdata_DATA = \
	TakaoPGothic.ttf \
	credits.txt \
	ipa_font_license.txt

