# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

nobase_dist_doc_DATA = \
    arrowNorthEast.png \
    COPYING \
    dollar.png \
    heart.png \
    index.html \
    plasmaAmmo.png \
    plasmaDamage.png \
    plasmaRate.png \
    rocket.png \
    rocketAmmo.png \
    sflogo.png \
    superCharge.png
