# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

sflocaledir = $(pkgdatadir)/locale

dist_sflocale_DATA = \
	build.py \
	genpot.sh \
	pr-starfighter.pot \
	en.po

dist_nobase_sflocale_DATA = \
    en/LC_MESSAGES/pr-starfighter.mo

