# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

locdir = $(pkgdatadir)/locale

# WHEN ADDING TRANSLATIONS: Please append all new gettext file names
# here (both the .po file and the .mo file).  This ensures the
# translation is both distributed and installed properly.
nobase_dist_loc_DATA = \
	build.py \
	genpot.sh \
	pr-starfighter.pot \
	en.po \
	ja.po \
	en/LC_MESSAGES/pr-starfighter.mo \
	ja/LC_MESSAGES/pr-starfighter.mo
