# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

desktopdir = $(datarootdir)/applications
desktop_DATA = starfighter.desktop

icondir = $(datarootdir)/pixmaps
icon_DATA = starfighter.png
