# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

desktopdir = $(datarootdir)/applications
desktop_DATA = io.github.pr_starfighter.starfighter.desktop

icondir = $(datarootdir)/pixmaps
icon_DATA = starfighter.png

dist_man6_MANS = starfighter.6

appdatadir = $(datarootdir)/metainfo
appdata_DATA = io.github.pr_starfighter.starfighter.metainfo.xml
