# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

musicdir = $(pkgdatadir)/music

nobase_dist_music_DATA = \
    android_journey.ogg \
    android_oppression.ogg \
    androids_last_dance.ogg \
    first_cyber_dance.ogg \
    frozen_jam.ogg \
    last_cyber_dance.ogg \
    orbital_colossus.ogg \
    railjet_short.ogg \
    rise_of_spirit.ogg \
    sleeping_with_androids.ogg \
    sound_and_silence.ogg \
    space_dimensions.ogg

EXTRA_DIST = sources

