# This file has been dedicated to the public domain, to the extent
# possible under applicable law, via CC0. See
# http://creativecommons.org/publicdomain/zero/1.0/ for more
# information. This file is offered as-is, without any warranty.

sounddir = $(pkgdatadir)/sound

nobase_dist_sound_DATA = \
    beamLaser.ogg \
    cloak.ogg \
    clock.ogg \
    explode.ogg \
    explode2.ogg \
    explode3.ogg \
    explode4.ogg \
    flyby.ogg \
    hyperSpace.ogg \
    item.ogg \
    laser.ogg \
    maledeath.ogg \
    missile.ogg \
    missile2.ogg \
    plasma.ogg \
    plasma2.ogg \
    plasma3.ogg \
    shield.ogg

